# gpu4pyscf

./: .coverage  .coveragerc  .flake8  .gitattribute  .gitignore  CHANGELOG  CONTRIBUTING.md  CONTRIBUTIONS.md  CONTRIBUTORS  MANIFEST.in  MULTIGPU_BUGFIXES.md  README.md  build.sh  requirements.txt  setup.py  test_gil.py  unitest.sh
examples/: 00-h2o.py  (+89 more)
gpu4pyscf/lib/: CMakeLists.txt  __init__.py  cublas.py  cuest_wrapper.py  cupy_helper.py  cusolver.py  cutensor.py  dftd3.py  dftd4.py  diis.py  libxc_prune.patch  logger.py  memcpy.py  multi_gpu.py  utils.py
gpu4pyscf/lib/cupy_helper/: CMakeLists.txt  add_sparse.cu  async_d2h_2d.cu  block_diag.cu  cart2sph.cu  cho_solve.cu  contract_cderi_k.cu  cutensor.cu  dgemm_cutlass_grouped_gemm.cu  dgemm_cutlass_grouped_gemm_2.cu  dist_matrix.cu  eigh.cu  grouped_dot.cu  grouped_dot_host.cu  grouped_gemm.cu  sparse_cderi.cu  take_last2d.cu  transpose.cu  unpack.cu
gpu4pyscf/lib/ecp/: CMakeLists.txt  bessel.cu  cart2sph.cu  common.cu  ecp.cu  ecp.h  ecp_type1.cu  ecp_type1_ip.cu  ecp_type1_ipip.cu  ecp_type2.cu  ecp_type2_ip.cu  ecp_type2_ipip.cu  gauss_chebyshev.cu  generate_cart2sph.py  generate_type1_ang_nuc.py  generate_type2_ang_nuc.py  nr_ecp_driver.cu  test.cu  type1_ang_nuc.cu  type2_ang_nuc.cu
gpu4pyscf/lib/gdft/: CMakeLists.txt  contract_rho.cu  contract_rho.cuh  contract_rho.hip  gen_grids.cu  gen_grids.hip  libxc.cu  libxc.h  libxc.hip  nr_eval_gto.cu  nr_eval_gto.cuh  nr_eval_gto.hip  nr_eval_rho.cu  nr_numint_sparse.cu  nr_numint_sparse.hip  numint.cu  vv10.cu  vv10.hip
gpu4pyscf/lib/gint/: CMakeLists.txt  autogen_int3c2e.sh  autogen_int3c2e_ip.sh  autogen_int3c2e_ipip.sh  bpcache.cu  cart2sph.cu  cint2e.cuh  config.h  constant.cu  constant.cuh  cuda_alloc.cuh  cuda_alloc.hiph  fill_ints.cu  g1e.cu  g1e_ip_root_1.cu  g1e_root_1.cu  g1e_root_123.cu  g2e.c  g2e.cu  g2e.h  g2e_root1.cu  g2e_root2.cu  g2e_root3.cu  g2e_root_n.cu  g3c1e.cu  g3c1e_ip.cu  g3c1e_ipip.cu  g3c2e.cu  g3c2e_ip1.cu  g3c2e_ip1_root1.cu  g3c2e_ip1ip2.cu  g3c2e_ip2.cu  g3c2e_ip2_root1.cu  g3c2e_ipip1.cu  g3c2e_ipip2.cu  g3c2e_ipvip1.cu  g3c2e_root1.cu  gint.cuh  gint.h  gint1e.h  (+20 more)
gpu4pyscf/lib/gint-rys/: CMakeLists.txt  fill_int3c2e.cu  fill_int3c2e_bdiv.cu  gint_driver.cu  int3c2e.cuh  rys_constant.cu  unrolled_int3c2e.cu  unrolled_int3c2e_bdiv.cu
gpu4pyscf/lib/gpbc/: CMakeLists.txt
gpu4pyscf/lib/gvhf/: CMakeLists.txt  autogen_int3c2e.sh  autogen_int3c2e_ip.sh  constant.cu  constant.cuh  contract_jk.cu  g2e.cu  g2e_get_veff_ip1.cu  g2e_get_veff_ip1_root2.cu  g2e_grad_get_veff.cu  g2e_gradient.cu  g2e_ip1.cu  g2e_ip1_root2.cu  g2e_ip1_root3.cu  g2e_root2.cu  g2e_root2_gradient.cu  g2e_root3.cu  g2e_root3_gradient.cu  g3c2e.cuh  g3c2e_ip1.cu  g3c2e_ip2.cu  g3c2e_pass1.cu  g3c2e_pass1_root1.cu  g3c2e_pass2.cu  g3c2e_pass2_root1.cu  get_veff_driver_ip1.cu  grad_get_veff_driver.cu  gvhf.h  nr_jk_driver.cu  nr_jk_driver_int3c2e_ip1.cu  nr_jk_driver_int3c2e_ip2.cu  nr_jk_driver_int3c2e_pass1.cu  nr_jk_driver_int3c2e_pass2.cu  nr_jk_driver_ip1.cu  nr_jk_gradient_driver.cu  rys_roots_dat.cu
gpu4pyscf/lib/gvhf-md/: CMakeLists.txt  boys.cu  contract_Et.cu  contract_int3c2e.cu  md_contract_j.cu  md_indices.cu  md_j.cuh  md_j_driver.cu  md_pairdata.c  pbc_md_contract_j.cu  unrolled_md_j.cu  unrolled_md_j_4dm.cu
gpu4pyscf/lib/gvhf-rys/: CMakeLists.txt  build_rys_gxyz.cuh  cart2xyz.c  contract_int3c2e.cu  count_tasks.cu  create_tasks.cu  create_tasks_ip1.cu  create_tasks_ip2.cu  create_tasks_o1.cu  decompress.cu  e_int2c2e_ip2.cu  ejk_int3c2e_ip1.cu  ejk_int3c2e_ip2.cu  fill_int3c2e.cu  fill_int3c2e_ip1.cu  gamma_inc.cu  gamma_inc_unrolled.cu  int3c2e_recontract.cu  md_contract_j.cu  md_j_driver.cu  mole_helper.cu  nr_sr_estimator.c  nr_sr_estimator.cu  rys1_contract_jk.cu  rys1_jk_driver.cu  rys1_roots.cu  rys_constant.cu  rys_contract_j.cu  rys_contract_j_experiment.cu  rys_contract_j_o1.cu  rys_contract_jk.cu  rys_contract_jk_ip1.cu  rys_contract_jk_ip1_o0.cu  rys_contract_jk_ip1_o1.cu  rys_contract_jk_ip2.cu  rys_contract_jk_ip2a.cu  rys_contract_k.cu  rys_contract_k.cuh  rys_jk_driver.cu  rys_roots.cu  (+26 more)
gpu4pyscf/lib/multigrid/: CMakeLists.txt  cart2xyz.cu  estimator.cu  eval_gga_mat.cu  eval_mat.cu  eval_mat_gga.cu  eval_mat_lda.cu  eval_mat_tau.cu  eval_rho.cu  eval_tau.cu  loader.cu  mg_driver.cu  multigrid.cu  multigrid.cuh
gpu4pyscf/lib/pbc/: CMakeLists.txt  contract_ft_ao.cu  contract_int3c2e.cu  contract_int3c2e_o2.cu  contract_int3c2e_pvp.cu  contract_int3c2e_v4.cu  create_tasks.cu  decompress.cu  ejk_int3c2e_ip1.cu  estimator.cu  fill_int2c2e.cu  fill_int2c2e_ip1.cu  fill_int3c2e.cu  fill_int3c2e_bdiv.cu  fill_int3c2e_ip1.cu  fill_int3c2e_o1.cu  fill_int3c2e_o2.cu  fill_int3c2e_v2.cu  fill_int3c2e_v3.cu  fill_int3c2e_v4.cu  fill_triu.cu  ft_ao.cu  ft_ao.cuh  ft_ao.h  ft_ao_bdiv.cu  ft_ao_ip1.cu  grid_integrate.c  int3c2e.cuh  int3c2e_create_tasks.cuh  int3c2e_create_tasks_o1.cuh  int3c2e_create_tasks_o2.cuh  int3c2e_o1.cuh  nr_eval_gto.cu  overlap.cu  pbc.cuh  pbc_driver.cu  pbc_driver_o1.cu  rys_contract_j.cu  rys_contract_jk_ip1.cu  rys_contract_k.cu  (+9 more)
gpu4pyscf/lib/sem/: CMakeLists.txt  eri_1c2e_kernel.cu  eri_2c2e_kernel.cu  fock.cu  grad_kernel.cu  ss_kernel.cu
gpu4pyscf/lib/solvent/: CMakeLists.txt  mnsol.F  mnsol_mem.F  pcm.cu  pcm_d_s.cu
gpu4pyscf/lib/tests/: compiled_cache.db  generate_anc_nuc.py  generate_cart2sph.py  test_cublas.py  test_cuest_wrapper.py  test_cupy_helper.py  test_cusolver.py  test_cutensor.py  test_dftd3.py  test_dftd4.py  test_diis.py  test_ecp.py  test_multi_gpu.py  test_to_gpu.py
pyscf/lib/: CMakeLists.txt
pyscf/lib/cupy_helper/: CMakeLists.txt  transpose.cu
pyscf/lib/gdft/: CMakeLists.txt  contract_rho.cu  contract_rho.cuh  nr_eval_gto.cu  nr_numint_sparse.cu
pyscf/lib/gint/: CMakeLists.txt  cint2e.cuh  fill_ints.cu  fill_ints.cuh  g2e.c  g2e.cu  g2e.h  g2e_gradient.cu  g2e_root2.cu  g2e_root2_gradient.cu  g2e_root3.cu  g2e_root3_gradient.cu  gint.h  gout2e.cuh  nr_fill_ao_ints.cu  nr_fill_ao_ints.cuh  nr_fill_ao_ints_gradient.cu  nr_fill_ao_ints_gradient.cuh  pair_data.c  rys_roots.cu  rys_roots.cuh
(+854 files in other folders)
